# cisco-externship-project

./: .env.example  .env.hosted.example  .gitignore  README.md  docker-compose.yml
.interface-design/: system.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  orchestrator.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/engines/: intelligence.py  snapshot.py
backend/app/generators/: synthetic.py
backend/app/integrations/: catalyst.py  splunk.py  store.py
backend/app/models/: schemas.py
backend/app/scenario/: controller.py  world.py
docs/: DEMO_MANUAL.md  DEMO_SCRIPT_BRIEF.md  DEPLOY_FREE.md  EventShield_Demo_Design_Scope_Architecture.md  IMPROVEMENTS.md  SPLUNK_SETUP.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AiCopilot.tsx  BusinessImpact.tsx  CiscoTechPanel.tsx  CommandCenter.tsx  DemoArchitecture.tsx  EvidenceDrawer.tsx  FairgroundsMap.tsx  GateDetail.tsx  IncidentView.tsx  LiveCharts.tsx  ProductionArchitecture.tsx  ReadinessGauge.tsx  ResponseLoop.tsx  ScenarioController.tsx  TimelineView.tsx  arch.tsx  icons.tsx  ui.tsx
frontend/src/hooks/: useEventShield.ts
frontend/src/lib/: api.ts  businessImpact.ts  types.ts
scripts/: create_splunk_indexes.sh  demo_up.sh  wire_splunk.sh
splunk/: default.yml
