[project]
name = "eventshield-backend"
version = "0.1.0"
description = "Cisco EventShield demo backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=14.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "redis>=5.2.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.0",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
